# im-mpd

./: .gitignore  CMakeLists.txt  LICENSE.txt  Makefile
src/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  MpdClientWrapper.cpp  MpdClientWrapper.hpp  Utils.cpp  Utils.hpp  main.cpp
src/Mpd/: ArbitraryTagged.cpp  ArbitraryTagged.hpp  CMakeLists.txt  MpdClientCache.hpp  MpdClientWrapper.cpp  MpdClientWrapper.hpp  MpdIdleEventData.cpp  MpdIdleEventData.hpp  MpdSongWrapper.cpp  MpdSongWrapper.hpp
src/TitleFormatting/: BuiltinFormatFunctions.cpp  BuiltinFormatFunctions.hpp  CMakeLists.txt  ITagged.hpp  TitleFormatter.cpp  TitleFormatter.hpp
src/panels/: CMakeLists.txt  Container.cpp  Container.hpp  LibraryLayer.hpp  LibraryTreeView.cpp  LibraryTreeView.h  MediaLibraryTree.cpp  MediaLibraryTree.hpp  PanelBase.cpp  PanelBase.hpp  PanelFlags.hpp  PlaybackButtons.cpp  PlaybackButtons.hpp  PlaylistView.cpp  PlaylistView.hpp  QueueView.cpp  QueueView.hpp  SeekBar.cpp  SeekBar.hpp  SimpleAlbumArt.cpp  SimpleAlbumArt.hpp  SongTableColumn.cpp  SongTableColumn.hpp  VolumeControl.cpp  VolumeControl.hpp
